--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "actions.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "production": "webpack -p"
+    "production": "webpack -p",
+    "lint": "eslint app/.; exit 0"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,10 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.10.2",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
     "html-webpack-plugin": "^2.15.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
