--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "production": "webpack -p",
-    "lint": "eslint app/.; exit 0"
+    "lint": "eslint app/.; exit 0",
+    "fix": "eslint --fix app/."
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "eslint": "^2.10.2",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^1.3.2",
     "html-webpack-plugin": "^2.15.0",
     "style-loader": "^0.13.1",
