--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server",
     "production": "webpack -p",
     "lint": "eslint app/.; exit 0",
-    "fix": "eslint --fix app/."
+    "fix": "eslint --fix app/.; exit 0"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.0-beta.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
