--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^3.0.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-modal": "^1.3.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
